k8s/web-control-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-control
  namespace: schoolapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-control
  template:
    metadata:
      labels:
        app: web-control
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: web-control
          image: registry.kpinnovative.co.th/paramee/web_school/web-control:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: web-control
  namespace: schoolapp
spec:
  selector:
    app: web-control
  ports:
    - port: 3000
      targetPort: 3000
